--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-zip": "^3.2.0",
     "humanize-duration": "^3.18.0",
+    "jest": "^24.8.0",
     "merge-stream": "^2.0.0",
+    "rewire": "^4.0.1",
     "vinyl-source-stream": "^2.0.0",
     "workingday-uk": "^1.0.0"
   },
@@ -43,5 +45,6 @@
         "modules": true
       }
     }
-  }
+  },
+  "dependencies": {}
 }
