--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "humanize-duration": "^3.18.0",
     "jest": "^24.8.0",
     "merge-stream": "^2.0.0",
+    "nock": "^10.0.6",
     "rewire": "^4.0.1",
     "vinyl-source-stream": "^2.0.0",
     "workingday-uk": "^1.0.0"
