--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "merge-stream": "^2.0.0",
     "nock": "^10.0.6",
     "rewire": "^4.0.1",
+    "sinon-chrome": "^3.0.1",
     "vinyl-source-stream": "^2.0.0",
     "workingday-uk": "^1.0.0"
   },
