--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rewire": "^4.0.1",
     "sinon-chrome": "^3.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "workingday-uk": "^1.0.0"
+    "workingday-uk": "^1.0.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "eslintConfig": {
     "env": {
