--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nock": "^10.0.6",
     "rewire": "^4.0.1",
     "sinon-chrome": "^3.0.1",
+    "timekeeper": "^2.2.0",
     "vinyl-source-stream": "^2.0.0",
     "workingday-uk": "^1.1.2",
     "xmlhttprequest": "^1.8.0"
