--- a/package.json
+++ b/package.json
@@ -5,27 +5,36 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "build": "gulp",
-    "package": "gulp package",
+    "build": "node utils/build.js",
+    "start": "node utils/webserver.js",
     "test": "jest",
     "test:ci": "jest && cat ./coverage/lcov.info | coveralls"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
     "@types/chrome": "0.0.124",
     "@types/jest": "^25.2.3",
-    "browserify": "^16.5.2",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "coveralls": "^3.1.0",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-zip": "^5.0.2",
+    "css-loader": "^4.2.1",
+    "file-loader": "^6.0.0",
+    "fs-extra": "^9.0.1",
+    "html-loader": "^1.2.1",
+    "html-webpack-plugin": "^4.3.0",
     "humanize-duration": "^3.24.0",
     "jest": "^26.4.2",
-    "merge-stream": "^2.0.0",
     "nock": "^13.0.4",
+    "regenerator-runtime": "^0.13.7",
     "sinon-chrome": "^3.0.1",
+    "style-loader": "^1.2.1",
     "timekeeper": "^2.2.0",
-    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "write-file-webpack-plugin": "^4.5.1",
     "xmlhttprequest": "^1.8.0"
   },
   "eslintConfig": {
