--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -7,6 +7,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v1
+        with:
+          node-version: '12'
       - name: Cache node modules
         uses: actions/cache@v2
         with:
