--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "gulp",
     "package": "gulp package",
+    "clean": "gulp ",
     "test": "jest",
     "test:ci": "jest && cat ./coverage/lcov.info | coveralls"
   },
@@ -26,6 +27,7 @@
     "sinon-chrome": "^3.0.1",
     "timekeeper": "^2.2.0",
     "vinyl-source-stream": "^2.0.0",
+    "webextension-polyfill": "^0.6.0",
     "xmlhttprequest": "^1.8.0"
   },
   "eslintConfig": {
